--- a/iOS/DemoTests/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
+++ b/iOS/DemoTests/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
@@ -22,12 +22,21 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="bHT-XB-Yhn">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mav-tu-w9V" customClass="NumberAutoSeperateTextField" customModule="Demo_testUI" customModuleProvider="target">
+                                <rect key="frame" x="90" y="300" width="195" height="67"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.92156862750000001" green="1" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="bHT-XB-Yhn" secondAttribute="trailing" id="8U7-hZ-tjp"/>
+                            <constraint firstItem="mav-tu-w9V" firstAttribute="centerX" secondItem="bHT-XB-Yhn" secondAttribute="centerX" id="9e1-iH-WK0"/>
+                            <constraint firstItem="mav-tu-w9V" firstAttribute="centerY" secondItem="bHT-XB-Yhn" secondAttribute="centerY" id="HnB-Z8-4vC"/>
                             <constraint firstItem="bHT-XB-Yhn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="NBV-iK-fV3"/>
                             <constraint firstItem="bHT-XB-Yhn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="STp-Ud-dVE"/>
+                            <constraint firstItem="mav-tu-w9V" firstAttribute="width" secondItem="bHT-XB-Yhn" secondAttribute="width" multiplier="0.52" id="b79-Hm-8Ub"/>
+                            <constraint firstItem="mav-tu-w9V" firstAttribute="height" secondItem="bHT-XB-Yhn" secondAttribute="height" multiplier="0.1" id="b90-c8-jI4"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="bHT-XB-Yhn" secondAttribute="bottom" id="icc-CU-p3I"/>
                         </constraints>
                     </view>
