--- a/iOS/DemoTests/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
+++ b/iOS/DemoTests/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,25 +22,35 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="bHT-XB-Yhn">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mav-tu-w9V" customClass="NumberAutoSeperateTextField" customModule="Demo_testUI" customModuleProvider="target">
-                                <rect key="frame" x="90" y="300" width="195" height="67"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GFm-O7-dmP">
+                                <rect key="frame" x="99" y="450" width="115" height="34"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="saveTouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nd4-wL-rW8"/>
+                                </connections>
+                            </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0sk-CF-3bD" customClass="CustomDatePicker" customModule="Demo_testUI" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="225.5" width="375" height="216"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" red="0.92156862750000001" green="1" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="bHT-XB-Yhn" secondAttribute="trailing" id="8U7-hZ-tjp"/>
-                            <constraint firstItem="mav-tu-w9V" firstAttribute="centerX" secondItem="bHT-XB-Yhn" secondAttribute="centerX" id="9e1-iH-WK0"/>
-                            <constraint firstItem="mav-tu-w9V" firstAttribute="centerY" secondItem="bHT-XB-Yhn" secondAttribute="centerY" id="HnB-Z8-4vC"/>
+                            <constraint firstItem="GFm-O7-dmP" firstAttribute="top" secondItem="0sk-CF-3bD" secondAttribute="bottom" constant="8" id="Hwb-aa-Suw"/>
+                            <constraint firstItem="0sk-CF-3bD" firstAttribute="height" secondItem="bHT-XB-Yhn" secondAttribute="height" multiplier="0.323838" id="JcB-WI-ols"/>
                             <constraint firstItem="bHT-XB-Yhn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="NBV-iK-fV3"/>
                             <constraint firstItem="bHT-XB-Yhn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="STp-Ud-dVE"/>
-                            <constraint firstItem="mav-tu-w9V" firstAttribute="width" secondItem="bHT-XB-Yhn" secondAttribute="width" multiplier="0.52" id="b79-Hm-8Ub"/>
-                            <constraint firstItem="mav-tu-w9V" firstAttribute="height" secondItem="bHT-XB-Yhn" secondAttribute="height" multiplier="0.1" id="b90-c8-jI4"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="bHT-XB-Yhn" secondAttribute="bottom" id="icc-CU-p3I"/>
+                            <constraint firstItem="0sk-CF-3bD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ipQ-H0-dZf"/>
+                            <constraint firstItem="GFm-O7-dmP" firstAttribute="centerX" secondItem="bHT-XB-Yhn" secondAttribute="centerX" id="k5T-uM-3JK"/>
+                            <constraint firstItem="0sk-CF-3bD" firstAttribute="centerY" secondItem="bHT-XB-Yhn" secondAttribute="centerY" id="mCj-J6-XuX"/>
+                            <constraint firstAttribute="trailing" secondItem="0sk-CF-3bD" secondAttribute="trailing" id="qwo-fO-IFz"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="T1q-Ol-3Z3"/>
+                    <connections>
+                        <outlet property="datePicker" destination="0sk-CF-3bD" id="P5o-Xk-XGy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
