--- a/webProjects/test-site/styles/style.css
+++ b/webProjects/test-site/styles/style.css
@@ -31,7 +31,7 @@ p {
 }
 
 img {
-    width: 80%;
+    width: 40%;
     display: block;
     margin: 0 auto;
 }
@@ -43,3 +43,7 @@ button {
     border-radius: 8px;
     border-color: lawngreen;
 }
+
+/* table {
+    border: 1px solid black;
+} */
